/*
 * MacroQuest: The extension platform for EverQuest
 * Copyright (C) 2002-2024 MacroQuest Authors
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License, version 2, as published by
 * the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 */

syntax = "proto3";

package mq.proto.routing;

message Peer {
	string ip = 1;
	uint32 port = 2;
}

message Client {
	optional string account = 1;
	optional string server = 2;
	optional string character = 3;
}

message Identification {
	oneof container {
		uint32 pid = 1;
		Peer peer = 2;
	}

	oneof address {
		string name = 11;
		Client client = 12;
	}
}

message Address {
	optional uint32 pid = 1;
	optional Peer peer = 2;

	oneof address {
		string name = 3;
		Client client = 4;
	}

	optional string mailbox = 6;
}

message AddIdentity {
	Identification id = 1;
}

message DropIdentity {
	Identification id = 1;
}

message RequestIdentities {
	oneof container {
		uint32 pid = 1;
		Peer peer = 2;
	}
}

message Envelope {
	Address address = 1;
	Address return_address = 2;

	uint32 mode = 3;
	int32 status = 4;
	uint32 sequence = 5;

	optional bytes payload = 99;
}

// TODO: NetworkMessage should be in Network.proto
message NetworkMessage {
	oneof contents {
		AddIdentity add = 1;
		DropIdentity drop = 2;
		RequestIdentities request = 3;

		Envelope routed = 10;
	}
}

enum NotifyLevel {
	Info = 0;
	Warning = 1;
	Error = 2;
}

message Notification {
	string title = 1;
	optional string message = 2;
	optional NotifyLevel level = 3;
}